# PurpleRain

./: Background.cc  Background.h  CMakeLists.txt  PurpleRain.cc  README.md  Window.cc  Window.h  rnd.h
cmake/: FindSDL2.cmake
